# ww2-end-predict

./: pyproject.toml
scripts/: classify.py  dowload.py
